# rss-feed-summary

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DATAFLOW.md  MODULES.md  README.md
src/rss_feed_summary/: cli.py  config.py  emailer.py  fetch.py  health.py  main.py  scheduler.py  summarize.py
templates/: email.html.j2
